--- a/src/app/page/size-guide/size-guide.component.scss
+++ b/src/app/page/size-guide/size-guide.component.scss
@@ -70,3 +70,30 @@ h2{
         }
     }
 }
+
+
+/*****===========Responsive=============***/
+@media(max-width:991px) {
+         
+}
+    
+@media(max-width:768px) {
+   #size-guide1{
+       .container1{
+           p{
+               padding: 0rem !important;
+           }
+       }
+   }
+}
+    
+@media(max-width:576px) {
+
+}
+ @media(max-width:470px) {	
+ 
+}
+@media(max-width:360px) {
+        
+}
+
