--- a/src/app/page/swatches/swatches.component.html
+++ b/src/app/page/swatches/swatches.component.html
@@ -97,16 +97,16 @@
 <section id = "swatch-slider">
   <div class = "container">
     <div class = "row">
-      <div class = "col-3">
+      <div class = "col-md-3 col-12">
 
       </div>
-        <div class = "col-6">
+        <div class = "col-md-6 col-12">
            <div class = "text-center">
                <h2>The Beni difference</h2>
                <p>Beni's proprietary washing technique creates a super soft, luxe texture and finish. Each finished rug is washed and dried up to 5 times.</p>
            </div>
         </div>
-        <div class = "col-3">
+        <div class = "col-md-3 col-12">
 
         </div> 
     </div>
