--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
         <div class = "sec1-col2">
           <h2>Our Story</h2>
           <p class = "py-3 mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id similique quo velit, facilis iure ea magni sequi voluptatum ratione beatae harum corrupti eos ut ipsa vero ex natus porro suscipit, deleniti asperiores ducimus rerum totam! Autem impedit cumque, nostrum ut veritatis quis blanditiis quidem, magnam aliquam maiores, error minima rem?</p>
-          <button type = "button" class = "btn blue-btn">Our Story</button>
+          <button type = "button" class = "btn blue-btn" routerLink = "/our-story">Our Story</button>
         </div>
       </div>
     </div>
@@ -83,7 +83,7 @@
     <div class="row">
       <div class="col-md-6">
         <div class="content">
-          <a href="#">
+          <a routerLink = "/products">
             <div class="content-overlay"></div>
             <img class="content-image" src="assets/img/sec5-img1.jpg">
             <div class="content-details fadeIn-bottom">
@@ -95,7 +95,7 @@
       </div>
       <div class="col-md-6">
         <div class="content">
-          <a href="#">
+          <a routerLink = "/products">
             <div class="content-overlay"></div>
             <img class="content-image" src="assets/img/sec5-img2.jpg">
             <div class="content-details fadeIn-bottom">
@@ -107,7 +107,7 @@
       </div>
       <div class="col-md-6">
         <div class="content ">
-          <a href="#">
+          <a routerLink = "/products">
             <div class="content-overlay "></div>
             <img class="content-image " src="assets/img/sec5-img3.jpg">
             <div class="content-details fadeIn-bottom">
@@ -119,7 +119,7 @@
       </div>
       <div class="col-md-6">
         <div class="content">
-          <a href="#">
+          <a routerLink = "/products">
             <div class="content-overlay"></div>
             <img class="content-image" src="assets/img/sec5-img4.jpg">
             <div class="content-details fadeIn-bottom">
