--- a/src/app/page/size-guide/size-guide.component.scss
+++ b/src/app/page/size-guide/size-guide.component.scss
@@ -67,14 +67,16 @@ h2{
         max-width: 700px !important;
         table{
             background-color: #fff;
+            margin-bottom: 0rem;
         }
     }
 }
-
-
 /*****===========Responsive=============***/
 @media(max-width:991px) {
-         
+    p{
+        font-size: 16px;
+        line-height: 24px;
+    }      
 }
     
 @media(max-width:768px) {
@@ -91,9 +93,32 @@ h2{
 
 }
  @media(max-width:470px) {	
- 
+    #size-guide1{
+        .nav-tabs{
+            .nav-link{
+                padding: 0.5rem;
+                font-size: 12px;
+            }
+        }
+    }  
 }
 @media(max-width:360px) {
-        
+    h5, .h5 {
+        font-size: 13px !important;
+        line-height: 19px !important;
+    } 
+
+    #size-guide2{
+        table{
+            tr{
+                th{
+                    font-size: 12px;
+                }
+                td{
+                    font-size: 12px;
+                }
+            }
+        }
+    }
 }
 
