--- a/src/app/page/swatches/swatches.component.html
+++ b/src/app/page/swatches/swatches.component.html
@@ -8,7 +8,7 @@
          </div>
         </div>
         <div class = "col-lg-5 col-12">
-          <div>
+          <div class  = "col1">
               <div>
                 <h2>Swatch Set</h2>
               </div>
@@ -56,35 +56,35 @@
 <section id = "swatch-section3">
     <div class = "container">
       <div class = "row">
-        <div class = "col-3">
+        <div class = "col-lg-3 col-12">
 
         </div>
-          <div class = "col-6">
+          <div class = "col-lg-6 col-12">
              <div class = "text-center">
                  <h2>Knotted vs. Flat</h2>
                  <p>Knotted rugs are sumptuous, warm, and incredibly soft underfoot. The pile for these rugs ranges from 1" - 1.5".  Flat rugs are the breezier, more casual cousin to full pile. A different weaving technique means these rugs keep a lower profile.</p>
              </div>
           </div>
-          <div class = "col-3">
+          <div class = "col-lg-3 col-12">
 
           </div>
-          <div class = "col-lg-6 col-12 pt-">
+          <div class = "col-lg-6 col-12 ">
             <a routerLink = "/products" class = "box">
             <div>
-              <div class = "img-container">
+              <div class = "img-container pt-3">
                 <img src = "assets/img/swatches/swatch2.jpg" alt = "img" width="100%" height="100%">
               </div>
-              <h6  class = "pt-3">Knotted Weave</h6>
+              <h6  class = "pt-2 mb-0">Knotted Weave</h6>
             </div>
            </a>
            </div>
            <div class = "col-lg-6 col-12">
             <a routerLink = "/products" class = "box">
               <div>
-                <div class = "img-container">
+                <div class = "img-container pt-3">
                   <img src = "assets/img/swatches/swatch3.jpg" alt = "img" width="100%" height="100%">
                 </div>
-                <h6 class = "pt-3">Flat Weave</h6>
+                <h6 class = "pt-2 mb-0">Flat Weave</h6>
               </div>
              </a>
            </div>
