--- a/src/app/page/visit-us/the-studio/the-studio.component.html
+++ b/src/app/page/visit-us/the-studio/the-studio.component.html
@@ -49,7 +49,7 @@
            <h2 class="text-capitalize" >What to Expect</h2>
         </div>
         <div class  ="row pt-4">
-            <div class = "col-lg-3 col-md-6 col-12">
+            <div class = "col-lg-3 col-md-6 col-sm-6 col-12">
                 <div class="card">
                     <img src="assets/img/visit/sec3-card1.jpg" width = "100%" alt="img" class="img-responsive">
                     <div class="content p-2">
@@ -58,7 +58,7 @@
                     </div>
                 </div>
             </div>
-            <div class = "col-lg-3 col-md-6 col-12">
+            <div class = "col-lg-3 col-md-6 col-sm-6 col-12">
                 <div class="card">
                     <img src="assets/img/visit/sec3-card2.jpg" width = "100%" alt="img" class="img-responsive">
                     <div class="content p-2">
@@ -67,7 +67,7 @@
                     </div>
                 </div>
             </div>
-            <div class = "col-lg-3 col-md-6 col-12">
+            <div class = "col-lg-3 col-md-6 col-sm-6 col-12">
                 <div class="card">
                     <img src="assets/img/visit/sec3-card3.jpg" width = "100%" alt="img" class="img-responsive">
                     <div class="content p-2">
@@ -76,7 +76,7 @@
                     </div>
                 </div>
             </div>
-            <div class = "col-lg-3 col-md-6 col-12">
+            <div class = "col-lg-3 col-md-6 col-sm-6 col-12">
                 <div class="card">
                     <img src="assets/img/visit/sec3-card4.jpg" width = "100%" alt="img" class="img-responsive">
                     <div class="content p-2">
