--- a/src/app/page/our-process/our-process.component.scss
+++ b/src/app/page/our-process/our-process.component.scss
@@ -215,11 +215,30 @@ img{
             padding: 1rem;
         }
      }
+     #process-banner{
+        h1{
+            font-size: 36px !important;
+            line-height: 42px !important;
+        }
+        .banner-content{
+            top: 30%;
+        }
+     }
  }
   @media(max-width:470px) {	
     #process-banner{
+        
     .banner-content{
         top: 10%;
+        h1{
+            font-size: 32px !important;
+            line-height: 40px !important;
+        }
+        button{
+            margin-top: 0rem;
+            width: 180px !important;
+            line-height: 25px;
+        }
     }
 
     #process-banner h1{
@@ -230,7 +249,11 @@ img{
      
  }
  @media(max-width:360px) {
-         
+    #process-banner{
+        .banner-content{
+            top: 5%;
+        }
+    } 
  }
 
 
