--- a/src/app/page/swatches/swatches.component.scss
+++ b/src/app/page/swatches/swatches.component.scss
@@ -11,16 +11,12 @@ p{
         height: 600px;
         img{
             object-fit: cover;
-            &:hover{
-                transition: 1.3s;
-            }
         }
     }
     p{
         font-size: 14px;
     }
 }
-
 /******Section2 SCSS*****/
 #swatch-section2{
     background:linear-gradient(-152deg, #e8e4dd 50%, #f6f5f3 0);
@@ -36,10 +32,7 @@ p{
         width: 100%;
         height: 600px;
         img{
-            object-fit: cover;
-            &:hover{
-                transition: 1.3s;
-            }
+			object-fit: cover;
         }
     }
 }
@@ -158,12 +151,81 @@ p{
     .container{
         position: relative;
         .banner-content{
+			width: 100%;
+			height: auto;
             position: absolute;
-            top: 40%;
-            text-align: center;
-            width: 100%;
+            top: 50%;
+			left: 50%;
+			text-align: center;
+			transform: translate(-50%, -50%) !important;
+			-ms-transform: translate(-50%, -50%) !important;
+			-webkit-transform: translate(-50%, -50%) !important;
+			
            
       }
        }   
   }
+ 
+
+  
+  /**==========++++++(Responsive SCSS)++++++++++============*/
+  @media (max-width: 991px) {
+	h2{
+	  &:after{
+		margin-top:5px;
+	  }
+	}	
+	#swatch-section1{
+		.col1{
+			padding-top: 1rem;
+		}
+	 .img-container{
+       height: 100%;
+ }
+ 
+}
+#swatch-section2{
+	.col1{
+		padding: 0rem 2rem;
+	}
+	.img-container{
+		height: 100%;
+  }
+}
+
+#swatch-slider {
+	.slick-center {
+	  .overlay {
+		opacity:0;
+	  }
+	  img {
+		transform:scale(1);
+	  }
+	}
+	h2 {
+	  margin-bottom:0.5rem;
+	}
+  }
+
+  
+}
+  @media (max-width: 768px) {
+	p {
+	  font-size:16px;
+	  line-height:24px;
+	}
+	
+  }
+  @media (max-width: 576px) {
+	#swatch-section2{
+		.col1{
+			padding: 0rem;
+		}
+	} 
+  }  
+  @media (max-width: 470px) {
+	
+  }
+  
+
  
