--- a/src/app/page/visit-us/the-apartment/the-apartment.component.html
+++ b/src/app/page/visit-us/the-apartment/the-apartment.component.html
@@ -26,7 +26,7 @@
 <!----------------(studio-section3 Start)------------------>
 <section id = "apartment-section2">
     <div class = "container">
-        <div class = "row flex-column-reverse flex-lg-row flex-md-row">
+        <div class = "row flex-column-reverse flex-lg-row">
             <div class = "col-lg-6 col-12">
             <div class = "visit-img">
                 <img src = "assets/img/visit/apartment1.jpg" width="100%"  alt = "img">
@@ -144,7 +144,7 @@
                 <h3>Request an Appointment</h3>
                 <h6>See Beni for yourself</h6>
             </div>
-            <div class ="row request_checkbox mt-4">
+            <div class ="row request_checkbox radio_checkbox mt-4">
                 <div class = "col-6">
                       <div>
                         <input type="radio" id="test1" name="radio-group" checked>
