--- a/src/app/page/thankyou/thankyou.component.html
+++ b/src/app/page/thankyou/thankyou.component.html
@@ -19,11 +19,12 @@
                 <tbody>
                     <tr *ngFor="let cart of order.order_item">
                         <td><div class = "checkout_product_img"><img src = "{{cart.image}}"></div></td>
-                        <td><h4 class = "mb-0">{{cart.title}}</h4>
-                          Qty: {{cart.stock}}
+                        <td class = "product_content"><h4 class = "mb-0">{{cart.title}}</h4>
                             <p *ngIf="cart.varition_id != null" class = "mb-0"><span>{{cart.variant_product[0].attribute1}} </span> / <span>{{cart.variant_product[0].attribute2}}</span> / <span>Tassels</span></p>
                       </td>
-                      <td class = "text-center"><h4>${{cart.price*cart.stock}}</h4></td>
+                     
+                      <td class = "text-center"><h5> <span>Qty: </span>{{cart.stock}}</h5></td>
+                      <td class = "text-end"><h4>${{cart.price*cart.stock}}</h4></td>
 
                     </tr>
 
