--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -188,7 +188,7 @@
                 </div>
                 <hr class = "section_hr">
                 <div class="card-body text-center">
-                  <h5 class="card-title mb-0">$80.00
+                  <h5 class="card-title mb-0">€80.00
                   </h5>
                 </div>
               </div>
@@ -203,7 +203,7 @@
                 </div>
                 <hr class = "section_hr">
                 <div class="card-body text-center">
-                  <h5 class="card-title mb-0">$90.00
+                  <h5 class="card-title mb-0">€90.00
                   </h5>
                 </div>
               </div>
@@ -218,7 +218,7 @@
                 </div>
                 <hr class = "section_hr">
                 <div class="card-body text-center">
-                  <h5 class="card-title mb-0">$70.00
+                  <h5 class="card-title mb-0">€70.00
                   </h5>
                 </div>
               </div>
@@ -233,7 +233,7 @@
                 </div>
                 <hr class = "section_hr">
                 <div class="card-body text-center">
-                  <h5 class="card-title mb-0">$85.00
+                  <h5 class="card-title mb-0">€85.00
                   </h5>
                 </div>
               </div>
